[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "productdemo"
version = "0.1.0"
description = "A demo Python package for publishing to Cloudsmith"
authors = [
    { name = "Rajdeep Singh", email = "rajdeep@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/your-org/productdemo"
Repository = "https://github.com/your-org/productdemo"
